compiler/tests/fa/errors/pure_fnval_fa.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع اعمال(f : تابع (صحیح) صحیح, x : صحیح) : صحیح:
    بازگشت f(x)
پایان

تابع اصلی:
    g : خودکار = (v : صحیح) => v + 1
    چاپ(اعمال(g, 4))
پایان
